--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,19 @@
         <li><a href="./portfolio.html"> Портфоліо </a></li>
         <li><a href="/"> Контакти </a></li>
       </ul>
-      <!--Фильтры -->
-      <section>
-        <button type="button">Усе</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Застосунки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
-      </section>
   </header>
 <main>
+  <!--Фильтры -->
+      <section>
+        <ul>        
+        <li><button type="button">Усе</button></li>
+        <li><button type="button">Веб-сайти</button></li>
+        <li><button type="button">Застосунки</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+        </ul>
+
+      </section>
       <!-- Проекты -->
       <section>
         <ul>
@@ -78,10 +81,8 @@
         </ul>
       </section>
 </main>
-      
-</body>
-  <!-- footer -->
-      <footer>
+<!-- footer -->      
+<footer>
         <!-- contacts-bottom -->
         <section>
           <h2>WebStudio</h2>
@@ -103,4 +104,5 @@
           <img src="./image/Sociallinks.png" alt="Соц. мережі" width="206" height="44" />
         </section>
       </footer>
+</body>     
 </html>
